hw6/sashank/.svn/pristine/c0/c0cd8d10ceb94742607f6c7f232332faa6b76ab7.svn-base
Simulator.java:174: error: ')' expected
			if(npfetch_f&&(currUop.TNnotBranch.equals("T"))?true:false;)
			                                                          ^
Simulator.java:174: error: illegal start of expression
			if(npfetch_f&&(currUop.TNnotBranch.equals("T"))?true:false;)
			                                                           ^
2 errors

Compiler error. At least one needed class was not created.
